# karp-backend

./: .bumpversion.cfg  .env.ci  .gitignore  .pylintrc  404.html  Makefile  Pipfile  README.md  asgi.py  index.html  objects.inv  pyproject.toml  pyrightconfig.json  pytest.ini  requirements.txt  run.py  setup.cfg  setup.py  tox.ini  wsgi.py
.github/workflows/: build.yml  ci.yml  coverage.yml
alembic/: env.py
alembic/versions/: 31f8e4fcc764_timestamps.py  5bb29472d33f_init_db.py  80ae4f994d6f_init_entry_repos.py
deploy/: requirements.txt
development/: index.html
doc/: karp_api_spec.yaml
docs/: index.html
karp/: __init__.py  bootstrap.py  cli.py  config.py  crud.py  database.py  errors.py  migration_helper.py  models.py  schemas.py  system_monitor.py
karp/adapters/: orm.py  repository.py
karp/api/: edit.py  history.py  query.py  stats.py
karp/app/: __init__.py  config.py  context.py
karp/application/: __init__.py  application.py  config.py  context.py
karp/cliapp/: entries_subapp.py  (+2 more)
libs/karp-lex-core/: .bumpversion.cfg  Makefile  pyproject.toml
libs/karp-lex-core/karp_lex_core/: __init__.py
libs/karp-lex-core/karp_lex_core/dtos/: __init__.py  entry_dto.py
libs/karp-lex-core/karp_lex_core/tests/: value_objects_unique_id_test.py
libs/karp-lex-core/karp_lex_core/value_objects/: __init__.py  unique_id.py
reference/: index.html
release-notes/: index.html
search/: search_index.json
tests/: conftest.py  test_editing_api.py  test_es_setup.py  test_network.py  test_query_api.py  utils.py
tools/: pip-requires
tutorials/: index.html
(+270 files in other folders)
